# ROS_Robot

./: KCF_Tracker_new.py
src/: setup.py
src/config/: kcf_params.yaml
src/launch/: kcf_follow.launch.py
src/rosmaster_m1/: README.md  package.xml  setup.cfg  setup.py
src/rosmaster_m1/config/: color_params.yaml  kcf_params.yaml
src/rosmaster_m1/launch/: color_follow.launch.py  kcf_follow.launch.py
src/rosmaster_m1/rosmaster_m1/: colorTracker.py
src/rosmaster_m1_kcf_follow/: README.md  package.xml  setup.cfg  setup.py
src/rosmaster_m1_kcf_follow/rosmaster_m1_kcf_follow/: kcf_follow.py
