<?xml version="1.0"?>
<package format="3">
  <name>rosmaster_m1_kcf_follow</name>
  <version>0.1.0</version>

  <description>
    ROS 2 KCF object following package for Yahboom ROSMaster M1
  </description>

  <maintainer email="your_email@example.com">
    TayasanM
  </maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
